# mmo-client

./: .gitignore  README.md
assets/models/: mannequin.glb.import
godot/: config.cfg  main.gd  main.tscn  netcode.gdextension  netcode.gdextension.uid  project.godot
godot/assets/images/: icon.svg.import
godot/entities/: asset_library.gd  asset_library.gd.uid  asset_library.tres  entity_template.gd  entity_template.gd.uid  global_animations.res  knight.tres  knight.tscn  skeleton_warrior.tres  skeleton_warrior.tscn
godot/game/: entity.gd  entity.gd.uid  entity.tscn  game_root.tscn  player.gd  player.gd.uid  player.tscn  world.gd  world.gd.uid  world.tscn  world_mesh.tscn
godot/globals/: config_manager.gd  config_manager.gd.uid  config_manager.tscn  game_assets.gd  game_assets.gd.uid  game_manager.gd  game_manager.gd.uid  network_manager.tscn  player_session.gd  player_session.gd.uid  player_session.tscn  social_manager.tscn
godot/src/: main.gd  main.tscn
godot/testing/: unsecured.gd  unsecured.gd.uid  unsecured.tscn
godot/tools/: export_world.gd  export_world.gd.uid  secured.gd  secured.gd.uid  secured.tscn  unsecured.gd  unsecured.tscn
godot/ui/: chat.gd  chat.gd.uid  chat.tscn  entity_frame.gd  entity_frame.gd.uid  entity_frame.tscn  ui.gd  ui.gd.uid
rust/: Cargo.toml
rust/src/: action.rs  async_runtime.rs  client.rs  event.rs  lib.rs  movement.rs
rust/src/domain/: chat.rs  entity.rs  mod.rs  transform.rs
rust/src/game/: client.rs  event.rs  mod.rs  movement.rs
rust/src/social/: client.rs  mod.rs
src/: main.gd
(+130 files in other folders)
